--- a/Events/style.css
+++ b/Events/style.css
@@ -1,3 +1,10 @@
-body{
-    height: 50000px;
+.highlist{
+    background-color: red;
+    text-decoration: line-through;
 }
+.checks
+{
+    background-color: red;
+    text-decoration: line-through;
+}
+
